--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
                 <nav>
                     <ul>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="about.html">About Me</a></li>
                         <li><a href="#resources">Resources</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
